[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tasktracker"
version = "0.1.0"
description = "A minimal CLI task tracking application"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
tasktracker = "tasktracker.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
